--- a/docs/source/0.intro/1.parts/1.start.rst
+++ b/docs/source/0.intro/1.parts/1.start.rst
@@ -5,17 +5,20 @@ These are the steps to start the robot.
 
 -------------------------------------------------------------------------------
 
-Start Switch / Button
------------------------
+Power Switch
+^^^^^^^^^^^^^^^^^^^^^^
 
 Turn the power switch clockwise.
 
 .. thumbnail:: /_images/components/start.png
 
 --------------------------------------------------------------------------------
+
+Start Button
+^^^^^^^^^^^^^^^^^^^^^^
     
 Press the start button. The start button must be pressed when operating the robot for the first time.
 
 It is also called the EMS button. Use the E-STOP button, release it, and then press it to restart the robot.
 
-.. thumbnail:: /_images/components/start.png
+.. thumbnail:: /_images/components/start2.png
